--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -62,6 +62,7 @@
     <dimen name="keyguard_appwidget_picker_margin_right">6dip</dimen>
     <integer name="keyguard_appwidget_picker_cols">1</integer>
 
+    <dimen name="wifi_item_content_textsize">14sp</dimen>
     <dimen name="ratingbar_minHeight">45px</dimen>
     <dimen name="ratingbar_maxHeight">57dip</dimen>
     <dimen name="togglebutton_light_switch_height">60px</dimen>
