--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -113,19 +113,21 @@
         <item name="android:layout_marginTop">8dip</item>
         <item name="android:layout_marginStart">16dip</item>
         <item name="android:layout_marginEnd">16dip</item>
-        <item name="android:orientation">vertical</item>
+        <item name="android:orientation">horizontal</item>
         <item name="android:gravity">start</item>
     </style>
 
     <style name="wifi_item_label">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="wifi_item_content">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">15dip</item>
+        <item name="android:textColor">@*android:color/black</item>
         <item name="android:textSize">18sp</item>
     </style>
 
