--- a/res/layout/manage_applications_apps.xml
+++ b/res/layout/manage_applications_apps.xml
@@ -31,16 +31,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
+                android:fadingEdge="none"
+                android:listSelector="@drawable/my_list_select"
                 android:scrollbarStyle="@*android:integer/preference_fragment_scrollbarStyle" />
             <TextView android:id="@android:id/empty"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="@string/no_applications"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textSize="20dp" />
         </FrameLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:layout_gravity="bottom"
+                android:paddingBottom="4dp"
+                android:orientation="horizontal">
+            <TextView android:id="@+id/my_usedStorageText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginStart="22dp"
+                android:textSize="13dp"
+                android:singleLine="true" />
+            <TextView android:id="@+id/my_freeStorageText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:textSize="13dp"
+                android:singleLine="true" />
+        </LinearLayout>
+
         <view class="com.android.settings.applications.LinearColorBar"
                 android:id="@+id/storage_color_bar"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="-5dp"
@@ -98,7 +124,7 @@
                 android:layout_height="wrap_content" />
         <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textSize="18dp"
                 android:text="@string/settings_safetylegal_activity_loading"
                 android:paddingTop="4dip"
                 android:singleLine="true" />
