--- a/res/layout/running_processes_view.xml
+++ b/res/layout/running_processes_view.xml
@@ -26,20 +26,44 @@
         <ListView android:id="@android:id/list"
                 android:layout_width="match_parent" 
                 android:layout_height="match_parent"
-                android:paddingStart="@*android:dimen/preference_fragment_padding_side"
-                android:paddingEnd="@*android:dimen/preference_fragment_padding_side"
-                android:drawSelectorOnTop="false"
                 android:scrollbarStyle="outsideOverlay"
+                android:drawSelectorOnTop="false"
+                android:listSelector="@drawable/my_list_select"
+                android:fadingEdge="none"
                 android:fastScrollEnabled="true" />
         <TextView android:id="@android:id/empty"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="@string/no_running_services"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textSize="20dp" />
     </FrameLayout>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="6dp"
+            android:paddingBottom="4dip"
+            android:orientation="horizontal">
+        <TextView android:id="@+id/my_foregroundText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="22dp"
+            android:singleLine="true"
+            android:textSize="13dp" />
+        <TextView android:id="@+id/my_backgroundText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:singleLine="true"
+            android:textSize="13dp" />
+    </LinearLayout>
+
     <view class="com.android.settings.applications.LinearColorBar"
             android:id="@+id/color_bar"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="-5dp"
