--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -17,120 +17,63 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/about_settings">
 
-        <!-- System update settings - launches activity -->
-        <PreferenceScreen android:key="system_update_settings"
-                android:title="@string/system_update_settings_list_item_title" 
-                android:summary="@string/system_update_settings_list_item_summary">
-            <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS" />
-        </PreferenceScreen>
-
-
-        <PreferenceScreen android:key="additional_system_update_settings"
-                          android:title="@string/additional_system_update_settings_list_item_title">
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="@string/additional_system_update"
-                    android:targetClass="@string/additional_system_update_menu" />
-        </PreferenceScreen>
-
-        <!-- Device status - launches activity -->
-        <PreferenceScreen android:key="status_info"
-                android:title="@string/device_status" 
-                android:summary="@string/device_status_summary">
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="com.android.settings"
-                    android:targetClass="com.android.settings.deviceinfo.Status" />
-        </PreferenceScreen>
-
-        <!-- Legal Information -->
-        <PreferenceScreen
-                android:key="container"
-                android:title="@string/legal_information">
-                    
-            <!-- Note: The titles given here probably won't be used.  Instead, we programmatically
-                       fill the title with the label of the activity with the corresponding action.
-                       If there is not an activity for an action, the item will be removed from the
-                       list. -->
-
-            <!-- Copyright information -->
-            <PreferenceScreen
-                    android:key="copyright"
-                    android:title="@string/copyright_title">
-                <intent android:action="android.settings.COPYRIGHT" />
-            </PreferenceScreen>
-
-            <!-- License information -->
-            <PreferenceScreen
-                    android:key="license"
-                    android:title="@string/license_title">
-                <intent android:action="android.settings.LICENSE" />
-            </PreferenceScreen>
-
-            <!-- Terms and conditions -->
-            <PreferenceScreen
-                    android:key="terms"
-                    android:title="@string/terms_title">
-                <intent android:action="android.settings.TERMS" />
-            </PreferenceScreen>
-
-        </PreferenceScreen>
-        
-        <PreferenceScreen
-                android:key="safetylegal"
-                android:title="@string/settings_safetylegal_title">
-            <intent android:action="android.settings.SAFETY" />
-        </PreferenceScreen>
-
-        <!-- Contributors -->
-        <!-- 
-        <PreferenceScreen
-                android:key="contributors"
-                android:title="@string/contributors_title">
-            <intent android:action="android.settings.TEAM" />
-        </PreferenceScreen>
-        -->
-
         <com.android.settings.RegulatoryInfoPreference android:key="regulatory_info"
                 android:title="@string/regulatory_information" />
 
         <!-- Device hardware model -->
-        <Preference android:key="device_model" 
-                style="?android:preferenceInformationStyle"
+        <Preference android:key="device_model"
                 android:title="@string/model_number"
                 android:summary="@string/device_info_default"/>
-                
+
         <!-- Device firmware version -->
-        <Preference android:key="firmware_version" 
-                style="?android:preferenceInformationStyle"
+        <Preference android:key="firmware_version"
                 android:title="@string/firmware_version"
                 android:summary="@string/device_info_default"/>
 
         <!-- Device FCC equipment id -->
         <Preference android:key="fcc_equipment_id"
-                style="?android:preferenceInformationStyle"
                 android:title="@string/fcc_equipment_id"
                 android:summary="@string/device_info_default"/>
 
         <!-- Device Baseband version -->
-        <Preference android:key="baseband_version" 
-                style="?android:preferenceInformationStyle"
+        <Preference android:key="baseband_version"
                 android:title="@string/baseband_version"
                 android:summary="@string/device_info_default"/>
-        
+
         <!-- Device Kernel version -->
-        <Preference android:key="kernel_version" 
-                style="?android:preferenceInformationStyle"
+        <Preference android:key="kernel_version"
                 android:title="@string/kernel_version"
                 android:summary="@string/device_info_default"/>
 
+        <!-- Device Serial Number -->
+        <Preference android:key="serial_number"
+                android:title="@string/status_serial_number"
+                android:summary="@string/device_info_default"/>
+
         <!-- Detailed build version -->
-        <Preference android:key="build_number" 
-                style="?android:preferenceInformationStyle"
+        <Preference android:key="build_number"
                 android:title="@string/build_number"
                 android:summary="@string/device_info_default"/>
 
+        <Preference android:key="wifi_mac_address"
+                android:title="@string/status_wifi_mac_address"
+                android:summary="@string/device_info_default"/>
+
+        <!-- Legal Information -->
+        <PreferenceScreen android:key="container"
+                android:title="@string/legal_information"
+                android:fragment="com.android.settings.deviceinfo.my_legalInfo_fragment"
+                android:layout="@layout/my_legal_info_preference"/>
+
+        <PreferenceScreen android:key="systemupdate"
+                android:title="@string/systemupdate">
+        <intent android:targetPackage="com.xiaoshou.systemupdate"
+                android:targetClass="com.xiaoshou.systemupdate.UpdateActivity"
+                android:action="android.intent.action.MAIN" />
+        </PreferenceScreen>
+
         <!-- SELinux status information -->
         <Preference android:key="selinux_status"
-                style="?android:preferenceInformationStyle"
                 android:title="@string/selinux_status"
                 android:summary="@string/selinux_status_enforcing"/>
 
